[package]
name = "assemble-logs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-rotate = {git = "https://github.com/Ploppz/file-rotate.git", branch = "misc"}
jq-rs = "0.4.1"
clap = "3.0.0-beta.4"
chrono = "0.4.19"
flate2 = "1.0.21"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0.43"
termion = "1.5.6"

[features]
default = ["bundled"]
bundled = ["jq-rs/bundled"]
