[package]
name = "assemble-logs"
version = "0.1.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
file-rotate = "0.5.3"
jq-rs = "0.4.1"
clap = "3.0.0-beta.4"
chrono = "0.4.19"
flate2 = "1.0.21"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0.43"
termion = "1.5.6"
deflate = "0.9.1"

[build-dependencies]
built = {version = "0.5.1", features = ["git2", "chrono", "semver"]}

[features]
default = ["bundled"]
bundled = ["jq-rs/bundled"]
